@@ -1,3 +1,14 @@
+2003-07-03  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-musicbrainz.c:
+	If Musicbrainz doesn't know how long a track is, work it out from
+	the sector size.
+
+	* src/mb-test.c:
+	Ditto.
+
+	Thanks to Bastien again for this patch.
+
 2003-07-02  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.h
